chore: Metadata APIs implemented and working